Update base url.

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl = "https://www.example.com/"
+baseurl = "https://thesomamyth.github.io/portfolio"
 title = "Dominik Jarco"
 author = "Dominik Jarco"
 canonifyurls = true
