--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/black-and-light"]
-	path = themes/black-and-light
-	url = https://github.com/davidhampgonsalves/hugo-black-and-light-theme.git
+[submodule "themes/djs-theme"]
+	path = themes/djs-theme
+	url = https://github.com/thesomamyth/hugo-black-and-light-theme
